--- a/package/meradinhodelivery/platforms/android/ant.properties
+++ b/package/meradinhodelivery/platforms/android/ant.properties
@@ -1,1 +1,1 @@
-:qrsigner -sigalg SHA0withRSA -digestalg SHA1 -keystore certificado.keystore mercadinho-delivery1-0.apk mercadinho-delivery
+jarsigner -sigalg SHA1withRSA -digestalg SHA1 -keystore /marketrud/package/meradinhodelivery/certificado.keystore mercadinho-delivery1-0.apk mercadinho-delivery
