--- a/package/meradinhodelivery/platforms/android/release-signing.properties
+++ b/package/meradinhodelivery/platforms/android/release-signing.properties
@@ -1,5 +1,5 @@
-storeFile=/marketrud/package/meradinhodelivery/icon-path.keystore
+storeFile=/marketrud/package/meradinhodelivery/novoCert.keystore
 storeType=jks
-keyAlias=icon-path
+keyAlias=novoCert
 keyPassword=root123
 storePassword=root123
